2013-01-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* add scrollbar to evar table
	* add keybindings to evar window
	* add default number of lines of evar window to config
	  record, but stay at config file version 04

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix embarrassing evar positioning bug

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try ocamlfind in configure for lablgtk2
	* fix ocamldoc warnings

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* write ocamldoc comments

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* delete newlines in short proof commands

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* center layers

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* warning for more than one initial goal

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* integrate new config values in configuration dialog

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* support Grab Existential Variables
	* display several layers with several proof trees each
	* protocol change, but stay at version 3
	* new config file version 04

2013-01-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* differentiate proof complete message according to
	  extistential status

2013-01-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* doc fixes

2013-01-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix paragraphs in help window

2013-01-14  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* support for bullets and braces
	* protocol change to version 3
	  - change proof-finished into branch-finished and adapt
	    its meaning
	* introduce proof-tree states without current sequent and
	  permit navigation commands without current sequent

2013-01-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix surviver reuse bug introduced yesterday

2013-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve positioning: make parents and new siblings visible
