@@ -1,3 +1,9 @@
+2013-01-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* implement undo
+	* have a separate context menu
+	* add headings in help window
+
 2013-01-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* add scrollbar to evar table
